[package]
name = "scoped_spawn"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
pin-project = "0.4.6"

[dependencies.tokio]
version = "0.2.5"
features = ["rt-core", "rt-threaded", "sync", "time"]
